1. More unit tests 2. Docker compose supported

--- a/pom.xml
+++ b/pom.xml
@@ -104,7 +104,7 @@
     <artifactId>docker-maven-plugin</artifactId>
     <version>0.4.11</version>
     <configuration>
-        <imageName>g00glen00b/${project.artifactId}</imageName>
+        <imageName>smolka/${project.artifactId}</imageName>
         <dockerDirectory>src/main/docker</dockerDirectory>
         <resources>
             <resource>
