--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,14 @@
 version: "2"
 services:
   web:
-    image: g00glen00b/capitalonedemo
+    image: smolka/capitalonedemo
     ports:
       - 8080:8080
     environment:
       - DB_NAME=capitalone
       - DB_USER=vista
       - DB_PASS=vista
+      - SCHEMA=capitalone
       - POSTGREDB_URL=jdbc:postgresql://192.168.99.100:5432
     depends_on: 
       - db 
@@ -19,5 +20,5 @@ services:
       - DB_NAME=capitalone
       - DB_USER=vista
       - DB_PASS=vista
-      - SCHEMA=capitalone 
+      - SCHEMA=capitalone
   
